# forgetag

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: main.tsx  styles.css
crates/forgetag-ai/: Cargo.toml
crates/forgetag-ai/src/: lib.rs
crates/forgetag-code/: Cargo.toml
crates/forgetag-code/src/: lib.rs
crates/forgetag-core/: Cargo.toml
crates/forgetag-core/src/: lib.rs
crates/forgetag-db/: Cargo.toml
crates/forgetag-db/src/: lib.rs
crates/forgetag-indexer/: Cargo.toml
crates/forgetag-indexer/src/: lib.rs
crates/forgetag-ipc/: Cargo.toml
crates/forgetag-ipc/src/: lib.rs
crates/forgetag-plugin/: Cargo.toml
crates/forgetag-plugin/src/: lib.rs
crates/forgetag-search/: Cargo.toml
crates/forgetag-search/src/: lib.rs
scripts/: Dockerfile.builder  build-appimage-ubuntu.sh  build-arch-pkg.sh  build-windows-msi.ps1  ci-build-linux.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
