[package]
name = "forgetag"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "forgetag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
forgetag-core.workspace = true
forgetag-ipc.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tracing.workspace = true
