[package]
name = "forgetag-db"
version = "0.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
forgetag-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
