[package]
name = "forgetag-search"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
forgetag-core.workspace = true
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
